--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/compiler-cli": "^17.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.18.0",
+    "angular-in-memory-web-api": "^0.17.0",
     "typescript": "~5.2.2"
   }
 }
